Password change route added
