# src/routes/userRoutes.ts
@@ -1,6 +1,7 @@
 import { Request, Response, Router } from "express";
 
 import {
+  changePassword,
   createUser,
   deleteUser,
   getUser,
@@ -11,10 +12,9 @@ import { authenticateUser } from "../middleware/authentication";
 
 const router: Router = Router();
 
-// Middleware
-router.use(authenticateUser);
-
 // Login a user
+// Make sure to keep this before we declare the middleware since
+// the login route obviously won't already be authenticated
 router.get("/login", async (req: Request, res: Response) => {
   const { email, password } = req.query;
 
@@ -23,17 +23,8 @@ router.get("/login", async (req: Request, res: Response) => {
   return res.status(status).json(data);
 });
 
-// Get user by ID
-router.get("/:userId", async (req: Request, res: Response) => {
-  const { userId } = req.params;
-  const user = await getUser(userId);
-
-  if (user) {
-    res.status(200).json(user);
-  } else {
-    res.status(404);
-  }
-});
+// Middleware
+router.use(authenticateUser);
 
 // Create user
 router.post("/", async (req: Request, res: Response) => {
@@ -48,6 +39,32 @@ router.post("/", async (req: Request, res: Response) => {
   } else {
     return res.status(500).json({ success: false });
   }
+});
+
+// Get user by ID
+router.get("/:userId", async (req: Request, res: Response) => {
+  const { userId } = req.params;
+  const user = await getUser(userId);
+
+  if (user) {
+    res.status(200).json(user);
+  } else {
+    res.status(404);
+  }
+});
+
+// Update a user's password
+router.put("/password", async (req: Request, res: Response) => {
+  const { user } = res.locals;
+  const { currentPassword, newPassword } = req.query;
+
+  const { status, data } = await changePassword(
+    user,
+    currentPassword,
+    newPassword
+  );
+
+  return res.status(status).json(data);
 });
 
 // Delete a user
